Remove hover opacity and scale to fix blurring issue

--- a/components/blocks/dataSourcesCard.module.css
+++ b/components/blocks/dataSourcesCard.module.css
@@ -1,5 +1,5 @@
 .Container {
-  @apply rounded-md border border-gray-30 overflow-hidden text-base cursor-pointer transition-all duration-75 flex flex-col hover:scale-105 hover:border-b-gray-30 hover:opacity-90;
+  @apply rounded-md border border-gray-30 overflow-hidden text-base cursor-pointer transition-all duration-75 flex flex-col;
 }
 
 .Container:hover {
